"""
Maintenance server implementation for the MCP module.
"""

from typing import Dict, List, Any, Optional
from rdflib import Graph, URIRef, Literal, Namespace
from rdflib.namespace import RDF, RDFS, OWL
from datetime import datetime
import logging

logger = logging.getLogger(__name__)

# Define default namespaces
MCP = Namespace("http://example.org/mcp#")
BFG9K = Namespace("http://example.org/bfg9k#")

class MaintenanceServer:
    """Server for managing model maintenance and conformance."""
    
    def __init__(self) -> None:
        """Initialize the maintenance server."""
        self.model = Graph()
        self.model.bind("rdf", RDF)
        self.model.bind("rdfs", RDFS)
        self.model.bind("owl", OWL)
        self.model.bind("mcp", MCP)
        self.model.bind("bfg9k", BFG9K)
        
        self.active_validations: List[Dict[str, Any]] = []
        self.processed_results: List[Dict[str, Any]] = []
        
        # Initialize default validation rules
        self._init_default_rules()
        self._init_default_metrics()
        
    def _init_default_rules(self) -> None:
        """Initialize default validation rules."""
        # Add class hierarchy check rule
        rule_uri = MCP.ClassHierarchyCheck
        self.model.add((rule_uri, RDF.type, MCP.ValidationRule))
        self.model.add((rule_uri, RDFS.comment, Literal("Check for cycles in class hierarchy")))
        self.model.add((rule_uri, MCP.severity, Literal("HIGH")))
        
        # Add property domain check rule
        rule_uri = MCP.PropertyDomainCheck
        self.model.add((rule_uri, RDF.type, MCP.ValidationRule))
        self.model.add((rule_uri, RDFS.comment, Literal("Validate property domains")))
        self.model.add((rule_uri, MCP.severity, Literal("HIGH")))
        
        # Add BFG9K pattern check rule
        rule_uri = MCP.BFG9KPatternCheck
        self.model.add((rule_uri, RDF.type, MCP.ValidationRule))
        self.model.add((rule_uri, RDFS.comment, Literal("Validate BFG9K pattern compliance")))
        self.model.add((rule_uri, MCP.severity, Literal("HIGH")))
        
    def _init_default_metrics(self) -> None:
        """Initialize default maintenance metrics."""
        # Add validation coverage metric
        metric_uri = MCP.ValidationCoverage
        self.model.add((metric_uri, RDF.type, MCP.Metric))
        self.model.add((metric_uri, MCP.value, Literal(0.95)))
        self.model.add((metric_uri, MCP.timestamp, Literal(datetime.now().isoformat())))
        
        # Add pattern compliance metric
        metric_uri = MCP.PatternCompliance
        self.model.add((metric_uri, RDF.type, MCP.Metric))
        self.model.add((metric_uri, MCP.value, Literal(0.85)))
        self.model.add((metric_uri, MCP.timestamp, Literal(datetime.now().isoformat())))
        
        # Add test coverage metric
        metric_uri = MCP.TestCoverage
        self.model.add((metric_uri, RDF.type, MCP.Metric))
        self.model.add((metric_uri, MCP.value, Literal(0.90)))
        self.model.add((metric_uri, MCP.timestamp, Literal(datetime.now().isoformat())))
        
    def get_maintenance_model(self) -> str:
        """Get the maintenance model as a string."""
        return self.model.serialize(format="turtle")
        
    def get_validation_rules(self) -> List[Dict[str, Any]]:
        """Get all validation rules."""
        rules = []
        for rule in self.model.subjects(RDF.type, MCP.ValidationRule):
            rules.append({
                "id": str(rule).split("#")[-1],
                "description": str(self.model.value(rule, RDFS.comment)),
                "severity": str(self.model.value(rule, MCP.severity))
            })
        return rules
        
    def get_maintenance_metrics(self) -> List[Dict[str, Any]]:
        """Get maintenance metrics."""
        metrics = []
        for metric in self.model.subjects(RDF.type, MCP.Metric):
            metrics.append({
                "id": str(metric).split("#")[-1],
                "value": float(self.model.value(metric, MCP.value)),
                "timestamp": str(self.model.value(metric, MCP.timestamp))
            })
        return metrics
        
    def validate_artifact(self, artifact_uri: str) -> Dict[str, Any]:
        """Validate an artifact.
        
        Args:
            artifact_uri: URI of the artifact to validate
            
        Returns:
            Validation result
        """
        # TODO: Implement actual validation logic
        return {
            "status": "valid",
            "timestamp": datetime.now().isoformat()
        }
        
    def track_change(self, change_id: str, description: str, affected_components: List[str]) -> Dict[str, Any]:
        """Track a change.
        
        Args:
            change_id: Unique identifier for the change
            description: Description of the change
            affected_components: List of affected components
            
        Returns:
            Change tracking result
        """
        change_uri = URIRef(f"http://example.org/mcp/changes#{change_id}")
        self.model.add((change_uri, RDF.type, URIRef("http://example.org/mcp#Change")))
        self.model.add((change_uri, RDFS.comment, Literal(description)))
        self.model.add((change_uri, URIRef("http://example.org/mcp#timestamp"), Literal(datetime.now().isoformat())))
        
        for component in affected_components:
            self.model.add((change_uri, URIRef("http://example.org/mcp#affects"), URIRef(component)))
            
        return {
            "status": "tracked",
            "change_id": change_id,
            "timestamp": datetime.now().isoformat()
        }
        
    def update_metric(self, metric_type: str, value: float) -> Dict[str, Any]:
        """Update a maintenance metric.
        
        Args:
            metric_type: Type of metric to update
            value: New metric value
            
        Returns:
            Update result
        """
        metric_uri = URIRef(f"http://example.org/mcp/metrics#{metric_type}")
        self.model.add((metric_uri, RDF.type, URIRef("http://example.org/mcp#Metric")))
        self.model.add((metric_uri, URIRef("http://example.org/mcp#value"), Literal(value)))
        self.model.add((metric_uri, URIRef("http://example.org/mcp#timestamp"), Literal(datetime.now().isoformat())))
        
        return {
            "status": "updated",
            "metric": metric_type,
            "value": value,
            "timestamp": datetime.now().isoformat()
        }
        
    def start_validation(self, target_id: str, config: Dict[str, Any]) -> Dict[str, Any]:
        """Start a new validation process"""
        validation = {
            "target_id": target_id,
            "config": config,
            "status": "started",
            "timestamp": None
        }
        self.active_validations.append(validation)
        return validation
        
    def update_validation(self, target_id: str, status: str) -> Dict[str, Any]:
        """Update validation status"""
        for validation in self.active_validations:
            if validation["target_id"] == target_id:
                validation["status"] = status
                return validation
        raise KeyError(f"No active validation found for target {target_id}")
        
    def process_validation(self, validation_result: Dict[str, Any]) -> Dict[str, Any]:
        """Process validation results and generate maintenance tasks"""
        try:
            # Extract validation details
            target = validation_result.get("target", "unknown")
            telemetry = validation_result.get("telemetry", {})
            
            # Process validation result
            result = {
                "target": target,
                "success": True,
                "tasks": [],
                "metrics": {}
            }
            
            # Check for validation errors
            if not validation_result.get("valid", True):
                result["tasks"].append({
                    "type": "error_fix",
                    "priority": "high",
                    "description": validation_result.get("error", "Unknown error")
                })
            
            # Process telemetry metrics
            for metric, value in telemetry.items():
                if isinstance(value, (int, float)) and value > 0:
                    result["metrics"][metric] = value
                    
                    # Add maintenance task if metric exceeds threshold
                    if value > 0.8:  # Example threshold
                        result["tasks"].append({
                            "type": "performance_optimization",
                            "priority": "medium",
                            "metric": metric,
                            "value": value
                        })
            
            # Store processed result
            self.processed_results.append(result)
            
            return result
            
        except Exception as e:
            logger.error(f"Error processing validation result: {str(e)}")
            return {
                "success": False,
                "error": f"Processing error: {str(e)}"
            } 